# sveltekit-wasm-game-of-life

./: README.md  build.sh  package.json  pnpm-lock.yaml  vite.config.ts
src/: app.html
src/routes/: +page.svelte
wasm/: Cargo.toml
wasm/src/: lib.rs
